# skill-linker

./: README.md  SPEC.md  USER_GUIDE.md  pyproject.toml  run.py  skill-linker.spec
.github/workflows/: build.yml
src/skill_linker/: __init__.py  config.py  linker.py  main.py  scanner.py
src/skill_linker/tui/: app.py  style.tcss
